# ML-Models

Linear Regression/: __init__.py  pyproject.toml
Linear Regression/src/: __init__.py  main.py
Linear Regression/test/: test_main.py
