[tool.poetry]
name = "linear regression"
version = "0.1.0"
description = ""
authors = ["Aitor Fernandez <aitorfernandezcas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
kagglehub = "^0.3.3"
polars = "^1.12.0"
numpy = "^2.1.2"
scikit-learn = "^1.5.2"
pytest = "^8.3.3"
statsmodels = "^0.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
